--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
 	"hostname": "localhost",
 	"pageSize": 5,
 	"port": 8000,
+	"routes": "routes.js",
 	"log": {
 		"dtrace": false,
 		"syslog": false
