Making the configuration Object optional, adding a CHANGELOG, updating `config.json` such that it doesn't inherit the "sample" routes
Updating README

Updating README

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 	"hostname": "localhost",
 	"pageSize": 5,
 	"port": 8000,
-	"routes": "routes.js",
+	"routes": null,
 	"log": {
 		"dtrace": false,
 		"syslog": false
