Cleaning up API such that it's less juggling to send a response
Updating README

Updating README & turtle.io

Updating default HTML page

Updating copy

Updating CHANGELOG

Updating README

--- a/config.json
+++ b/config.json
@@ -1,10 +1,9 @@
 {
 	"auth": null,
 	"hostname": "localhost",
-	"pageSize": 5,
 	"port": 8000,
 	"routes": null,
-	"log": {
+	"logs": {
 		"dtrace": false,
 		"syslog": false
 	},
