--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tenso",
-  "description": "Tensō is a REST framework for node.js, designed to simplify the implementation of APIs.",
+  "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
   "version": "0.0.5",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
@@ -47,6 +47,7 @@
   "keywords": [
     "REST",
     "API",
+    "facade",
     "framework"
   ]
 }
