--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "keigai": "0.6.0",
-    "turtle.io": "2.1.9"
+    "turtle.io": "2.1.10"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -38,11 +38,13 @@
     "grunt-sed": "~0.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-jshint": "~0.1",
-    "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-watch": "~0.2",
     "grunt-contrib-sass": "~0.4.0",
     "grunt-jsdoc": "~0.5.1",
-    "ink-docstrap" : "~0.3.0"
+    "ink-docstrap": "~0.3.0",
+    "hippie": "~0.3.0",
+    "chai": "^1.9.1",
+    "grunt-mocha-test": "^0.11.0"
   },
   "keywords": [
     "REST",
