--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.0.10",
+  "version": "1.0.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "keigai": "0.6.0",
-    "turtle.io": "2.1.10"
+    "turtle.io": "2.1.10",
+    "passport": "0.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
