Adding middleware to handle protected routes for none Basic Auth, updating deps

--- a/config.json
+++ b/config.json
@@ -1,5 +1,15 @@
 {
-	"auth": null,
+	"auth": {
+		"basic": {
+			"enabled": false,
+			"list": [],
+			"realm": "Private"
+		},
+		"bearer": {
+			"enabled": false,
+			"list": []
+		}
+	},
 	"hostname": "localhost",
 	"port": 8000,
 	"routes": null,
