Decorating `hostname` on Tenso instance, removed unwanted function, refactored tests to use multiple servers, added tests for authentications
Updating sample

--- a/config.json
+++ b/config.json
@@ -7,8 +7,9 @@
 		},
 		"bearer": {
 			"enabled": false,
-			"list": []
-		}
+			"tokens": []
+		},
+		"protect": ["/"]
 	},
 	"hostname": "localhost",
 	"port": 8000,
