--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -52,6 +52,6 @@
     "REST",
     "API",
     "facade",
-    "framework"
+    "server"
   ]
 }
