--- a/config.json
+++ b/config.json
@@ -40,6 +40,8 @@
 	"rate": {
 		"enabled": false,
 		"limit": 1000,
-		"reset": 3600
+		"reset": 3600,
+		"status": 429,
+		"message": "Too many requests"
 	}
 }
