Setting default `maxBytes` size of 1 MB, updating README & CHANGELOG

--- a/config.json
+++ b/config.json
@@ -29,7 +29,7 @@
 		"dtrace": false,
 		"syslog": false
 	},
-	"maxBytes": 0,
+	"maxBytes": 1048576,
 	"session": {
 		"key": "",
 		"max_age": 60000
