Updating `config.json` with more options of `turtle.io`, upgrading turtle.io to gain `accept: application/json; indent=n` driven pretty JSON, fixes #4
Updating README

Updating README

--- a/config.json
+++ b/config.json
@@ -25,13 +25,14 @@
 	"cache": 1000,
 	"compress": true,
 	"hostname": "localhost",
-	"port": 8000,
-	"routes": null,
+	"json": 2,
 	"logs": {
 		"dtrace": false,
 		"syslog": false
 	},
 	"maxBytes": 1048576,
+	"port": 8000,
+	"routes": null,
 	"session": {
 		"key": "",
 		"max_age": 60000
