Added `Facebook` authentication via `passport`, fixed the `RegExp` used to retrieve the rate limit id from the `authorization` header, moved authentication gateway middleware into `zuul()`
Updating README

Updating README

Updating README

--- a/config.json
+++ b/config.json
@@ -9,9 +9,17 @@
 			"enabled": false,
 			"tokens": []
 		},
+		"facebook": {
+			"enabled": false,
+			"auth": null,
+			"consumer_key": "",
+			"consumer_secret": "",
+			"callback_url": "",
+			"login": "/login"
+		},
 		"local": {
 			"enabled": false,
-			"callback": null,
+			"auth": null,
 			"login": "/login"
 		},
 		"twitter": {
