--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -32,20 +32,20 @@
     "turtle.io": "2.3.0",
     "express-session": "^1.7.2",
     "passport": "0.2.0",
+    "passport-facebook": "1.0.3",
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.6",
-    "grunt-exec": "~0.4",
-    "grunt-sed": "~0.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-jshint": "~0.1",
-    "grunt-contrib-watch": "~0.2",
-    "grunt-contrib-sass": "~0.4.0",
-    "grunt-jsdoc": "~0.5.1",
-    "ink-docstrap": "~0.3.0",
+    "grunt-cli": "~0.1.13",
+    "grunt": "~0.4.5",
+    "grunt-sed": "~0.1.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-jsdoc": "~0.5.6",
+    "ink-docstrap": "~0.4.12",
     "hippie": "~0.3.0",
     "chai": "^1.9.1",
     "grunt-mocha-test": "^0.11.0"
