Added `Google` authentication
Updating README

Updating README

Minor tweak

Minor tweak

--- a/config.json
+++ b/config.json
@@ -17,6 +17,12 @@
 			"callback_url": "",
 			"login": "/login"
 		},
+		"google": {
+			"enabled": false,
+			"auth": null,
+			"realm": "",
+			"login": "/login"
+		},
 		"local": {
 			"enabled": false,
 			"auth": null,
