--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.7.2",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
+    "passport-google": "0.3.0",
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
     "passport-twitter": "1.0.2"
