Shallow cloning response, updating turtle.io to 2.3.2, doing sync request for `LinkedIn` auth (in progress)
Minor tweaks

Minor tweaks

Minor tweak

Removing unneeded code in `Local Auth`

--- a/config.json
+++ b/config.json
@@ -42,7 +42,7 @@
 	},
 	"cache": 1000,
 	"compress": true,
-	"hostname": "localhost",
+	"hostname": "127.0.0.1",
 	"json": 2,
 	"logs": {
 		"dtrace": false,
