--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
   },
   "dependencies": {
     "keigai": "0.6.1",
-    "turtle.io": "3.0.3",
+    "turtle.io": "3.0.6",
     "express-session": "^1.7.2",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
     "passport-google": "0.3.0",
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
+    "passport-linkedin": "0.1.3",
     "passport-twitter": "1.0.2"
   },
   "devDependencies": {
