Upgrading turtle.io to 3.0.7, adding cookie middleware, minor tweak to `LinkedIn` auth

--- a/config.json
+++ b/config.json
@@ -40,6 +40,12 @@
 		}
 	},
 	"compress": true,
+	"cookie": {
+		"secret": "tenso",
+		"resave": true,
+		"rolling": true,
+		"saveUninitialized": true
+	},
 	"hostname": "127.0.0.1",
 	"json": 2,
 	"logs": {
