--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "keigai": "0.6.1",
-    "turtle.io": "3.0.6",
+    "turtle.io": "3.0.7",
+    "cookie-parser": "1.3.2",
     "express-session": "^1.7.2",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
