Adding redis support for the session store

--- a/config.json
+++ b/config.json
@@ -51,7 +51,11 @@
 	"routes": null,
 	"session" : {
 		"secret": null,
-		"store": "memory"
+		"store": "redis",
+		"redis": {
+			"host": "127.0.0.1",
+			"port": 6379
+		}
 	},
 	"ssl": {
 		"key": null,
