--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
     "passport-linkedin": "0.1.3",
-    "passport-twitter": "1.0.2"
+    "passport-twitter": "1.0.2",
+    "connect-redis": "2.0.0"
   },
   "devDependencies": {
     "grunt-cli": "~0.1.13",
