--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "cookie-parser": "1.3.2",
     "express-session": "^1.7.2",
     "passport": "0.2.0",
+    "passport-oauth2": "1.1.2",
     "passport-facebook": "1.0.3",
     "passport-google": "0.3.0",
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
     "passport-linkedin": "0.1.3",
+    "passport-saml": "0.5.2",
     "passport-twitter": "1.0.2",
     "connect-redis": "2.0.0",
     "lusca": "1.0.1"
