--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -39,6 +39,7 @@
     "passport-http": "0.2.2",
     "passport-http-bearer": "1.0.1",
     "passport-linkedin": "0.1.3",
+    "passport-local": "1.0.0",
     "passport-saml": "0.5.2",
     "passport-twitter": "1.0.2",
     "connect-redis": "2.0.0",
@@ -57,7 +58,7 @@
     "hippie": "~0.3.0",
     "chai": "^1.9.1",
     "grunt-mocha-test": "^0.11.0",
-    "grunt-nsp-package": "0.0.5"
+    "grunt-nsp-package": "^0.0.5"
   },
   "keywords": [
     "REST",
