Created `parse()` middleware via `bootstrap()` for interop with express centric middleware

--- a/config.json
+++ b/config.json
@@ -36,8 +36,7 @@
 		},
 		"local": {
 			"enabled": false,
-			"auth": null,
-			"middleware": null
+			"auth": null
 		},
 		"saml": {
 			"enabled": false,
