--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -28,10 +28,10 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "keigai": "0.6.2",
-    "turtle.io": "3.0.17",
-    "cookie-parser": "1.3.2",
-    "express-session": "^1.7.2",
+    "keigai": "0.6.5",
+    "turtle.io": "3.0.19",
+    "cookie-parser": "1.3.3",
+    "express-session": "1.7.6",
     "passport": "0.2.0",
     "passport-oauth2": "1.1.2",
     "passport-facebook": "1.0.3",
