--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.9.15",
+  "version": "0.9.16",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -28,22 +28,22 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "keigai": "0.8.6",
-    "turtle.io": "3.1.2",
-    "cookie-parser": "1.3.3",
-    "express-session": "1.8.2",
-    "passport": "0.2.0",
-    "passport-oauth2": "1.1.2",
-    "passport-facebook": "1.0.3",
-    "passport-google": "0.3.0",
-    "passport-http": "0.2.2",
-    "passport-http-bearer": "1.0.1",
-    "passport-linkedin": "0.1.3",
-    "passport-local": "1.0.0",
-    "passport-saml": "0.5.2",
-    "passport-twitter": "1.0.2",
-    "connect-redis": "2.0.0",
-    "lusca": "1.0.1"
+    "keigai": "~0.9.0",
+    "turtle.io": "~3.1.3",
+    "cookie-parser": "~1.3.3",
+    "express-session": "~1.8.2",
+    "passport": "~0.2.0",
+    "passport-oauth2": "~1.1.2",
+    "passport-facebook": "~1.0.3",
+    "passport-google": "~0.3.0",
+    "passport-http": "~0.2.2",
+    "passport-http-bearer": "~1.0.1",
+    "passport-linkedin": "~0.1.3",
+    "passport-local": "~1.0.0",
+    "passport-saml": "~0.5.2",
+    "passport-twitter": "~1.0.2",
+    "connect-redis": "~2.0.0",
+    "lusca": "~1.0.1"
   },
   "devDependencies": {
     "grunt-cli": "~0.1.13",
