--- a/config.json
+++ b/config.json
@@ -86,6 +86,7 @@
 		"limit": 450,
 		"reset": 900,
 		"status": 429,
-		"message": "Too many requests"
+		"message": "Too many requests",
+		"override": null
 	}
 }
