--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -28,8 +28,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "keigai": "~1.1.3",
-    "turtle.io": "~3.1.25",
+    "keigai": "~1.1.4",
+    "turtle.io": "~3.2.0",
     "cookie-parser": "~1.3.3",
     "express-session": "~1.8.2",
     "passport": "~0.2.0",
@@ -48,9 +48,9 @@
   "devDependencies": {
     "grunt-cli": "~0.1.13",
     "grunt": "~0.4.5",
+    "grunt-6to5": "^2.0.0",
     "grunt-sed": "~0.1.1",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-jsdoc": "~0.5.6",
