--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -28,11 +28,11 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "keigai": "~1.1.4",
-    "turtle.io": "~3.2.3",
-    "cookie-parser": "~1.3.3",
-    "express-session": "~1.8.2",
-    "passport": "~0.2.0",
+    "keigai": "~1.1.5",
+    "turtle.io": "~3.2.4",
+    "cookie-parser": "~1.3.4",
+    "express-session": "~1.10.3",
+    "passport": "~0.2.1",
     "passport-oauth2": "~1.1.2",
     "passport-facebook": "~1.0.3",
     "passport-google": "~0.3.0",
@@ -40,15 +40,15 @@
     "passport-http-bearer": "~1.0.1",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
-    "passport-saml": "~0.5.2",
+    "passport-saml": "~0.9.1",
     "passport-twitter": "~1.0.2",
-    "connect-redis": "~2.0.0",
-    "lusca": "~1.0.1"
+    "connect-redis": "~2.2.0",
+    "lusca": "~1.0.2"
   },
   "devDependencies": {
     "grunt-cli": "~0.1.13",
     "grunt": "~0.4.5",
-    "grunt-6to5": "^3.0.0",
+    "grunt-babel": "^4.0.0",
     "grunt-sed": "~0.1.1",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
