Fixing `error()` such that it routes through the instance of `Tenso`, adding support for `HTML`, `YAML`, & `XML` output via new renderers (`JSON` remains of course); `HTML` is not implemented yet
Building

--- a/config.json
+++ b/config.json
@@ -58,6 +58,12 @@
 		"dtrace": false,
 		"stack": false
 	},
+	"renderers": [
+		"html",
+		"yaml",
+		"xml",
+		"json"
+	],
 	"security": {
 		"key": "x-csrf-token",
 		"secret": "tenso",
