--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -28,36 +28,37 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "keigai": "~1.2.3",
-    "turtle.io": "~3.2.12",
+    "connect-redis": "~2.2.0",
     "cookie-parser": "~1.3.4",
     "express-session": "~1.10.3",
+    "keigai": "~1.3.0",
+    "lusca": "~1.0.2",
     "passport": "~0.2.1",
-    "passport-oauth2": "~1.1.2",
     "passport-facebook": "~1.0.3",
     "passport-google": "~0.3.0",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
+    "passport-oauth2": "~1.1.2",
     "passport-saml": "~0.9.1",
     "passport-twitter": "~1.0.2",
-    "connect-redis": "~2.2.0",
-    "lusca": "~1.0.2"
+    "turtle.io": "~3.2.13",
+    "yamljs": "^0.2.1"
   },
   "devDependencies": {
-    "grunt-cli": "~0.1.13",
     "grunt": "~0.4.5",
     "grunt-babel": "^4.0.0",
-    "grunt-sed": "~0.1.1",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-jsdoc": "~0.5.6",
-    "ink-docstrap": "~0.4.12",
-    "hippie": "~0.3.0",
     "grunt-mocha-test": "^0.11.0",
-    "grunt-nsp-package": "^0.0.5"
+    "grunt-nsp-package": "^0.0.5",
+    "grunt-sed": "~0.1.1",
+    "hippie": "~0.3.0",
+    "ink-docstrap": "~0.4.12"
   },
   "keywords": [
     "REST",
