--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "1.4.10",
+  "version": "1.5.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -14,12 +14,7 @@
   "bugs": {
     "url": "https://github.com/avoidwork/tenso/issues"
   },
-  "licenses": [
-    {
-      "type": "BSD-3",
-      "url": "https://raw.github.com/avoidwork/tenso/master/LICENSE"
-    }
-  ],
+  "license": "BSD-3-Clause",
   "main": "lib/tenso",
   "engines": {
     "node": ">=0.10.0"
@@ -31,7 +26,7 @@
     "connect-redis": "~2.2.0",
     "cookie-parser": "~1.3.4",
     "express-session": "~1.10.3",
-    "keigai": "~1.3.11",
+    "keigai": "~1.3.12",
     "lusca": "~1.0.2",
     "passport": "~0.2.1",
     "passport-facebook": "~1.0.3",
@@ -43,12 +38,12 @@
     "passport-oauth2": "~1.1.2",
     "passport-saml": "~0.9.1",
     "passport-twitter": "~1.0.2",
-    "turtle.io": "~3.2.18",
+    "turtle.io": "~4.0.0",
     "yamljs": "^0.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-babel": "^4.0.0",
+    "grunt-babel": "^5.0.0",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-sass": "~0.8.1",
