--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-eslint": "^14.0.0",
     "grunt-jsdoc": "~0.5.6",
     "grunt-mocha-test": "^0.11.0",
     "grunt-nsp-package": "^0.0.5",
