--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "yamljs": "^0.2.1"
   },
   "devDependencies": {
+    "babel-eslint": "^3.1.15",
     "grunt": "~0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-cli": "~0.1.13",
