--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -38,6 +38,8 @@
     "passport-oauth2": "~1.1.2",
     "passport-saml": "~0.9.1",
     "passport-twitter": "~1.0.2",
+    "retsu": "^1.1.0",
+    "tiny-defer": "^1.0.2",
     "turtle.io": "~4.0.15",
     "yamljs": "^0.2.1"
   },
