--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "tenso",
-  "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "2.0.7",
+  "description": "Tensō is a REST API gateway for node.js, designed to simplify the implementation of APIs.",
+  "version": "3.0.0",
   "homepage": "http://avoidwork.github.io/tenso",
-  "author": {
-    "name": "Jason Mulligan",
-    "email": "jason.mulligan@avoidwork.com"
-  },
+  "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/avoidwork/tenso.git"
@@ -17,53 +14,58 @@
   "license": "BSD-3-Clause",
   "main": "lib/tenso",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4.0.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "connect-redis": "~2.2.0",
-    "cookie-parser": "~1.3.4",
-    "express-session": "~1.10.3",
+    "connect-redis": "^3.0.1",
+    "cookie-parser": "^1.4.0",
+    "express-session": "^1.12.1",
     "keigai": "~1.3.19",
-    "lusca": "~1.0.2",
-    "passport": "~0.2.1",
-    "passport-facebook": "~1.0.3",
-    "passport-google": "~0.3.0",
-    "passport-http": "~0.2.2",
-    "passport-http-bearer": "~1.0.1",
-    "passport-linkedin": "~0.1.3",
-    "passport-local": "~1.0.0",
-    "passport-oauth2": "~1.1.2",
-    "passport-saml": "~0.9.1",
-    "passport-twitter": "~1.0.2",
+    "lusca": "^1.3.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.0.0",
+    "passport-google": "^0.3.0",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-linkedin": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.1.2",
+    "passport-saml": "^0.14.0",
+    "passport-twitter": "^1.0.3",
     "retsu": "^2.0.0",
-    "tiny-defer": "^1.0.3",
-    "turtle.io": "~4.1.5",
-    "yamljs": "^0.2.1"
+    "tiny-defer": "^1.0.4",
+    "turtle.io": "^5.0.3",
+    "yamljs": "^0.2.4"
   },
   "devDependencies": {
-    "babel-eslint": "^3.1.15",
-    "grunt": "~0.4.5",
-    "grunt-babel": "^5.0.0",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-eslint": "^14.0.0",
+    "babel-eslint": "^4.1.4",
+    "babel-preset-es2015": "^6.1.2",
+    "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.1.3",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.2.0",
+    "grunt-eslint": "^17.3.1",
     "grunt-jsdoc": "~0.5.6",
-    "grunt-mocha-test": "^0.11.0",
-    "grunt-nsp-package": "^0.0.5",
-    "grunt-sed": "~0.1.1",
-    "hippie": "~0.3.0",
-    "ink-docstrap": "~0.4.12"
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-nsp": "^2.1.2",
+    "hippie": "^0.4.0",
+    "ink-docstrap": "~0.4.12",
+    "mocha": "^2.3.2"
   },
   "keywords": [
     "REST",
     "API",
-    "facade",
+    "gateway",
     "server",
-    "hypermedia"
+    "hypermedia",
+    "elastic",
+    "api",
+    "app",
+    "application"
   ]
 }
