Initial commit of restructuring code

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-twitter": "^1.0.3",
     "retsu": "^2.0.0",
     "tiny-defer": "^1.0.4",
+    "tiny-uuid4": "^1.0.0",
     "turtle.io": "^5.0.3",
     "yamljs": "^0.2.4"
   },
