--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-redis": "^3.0.1",
     "cookie-parser": "^1.4.0",
     "express-session": "^1.12.1",
+    "keysort": "^0.2.0",
     "lusca": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
