--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-preset-es2015": "^6.1.2",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.2.0",
     "grunt-eslint": "^17.3.1",
