--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "connect-redis": "^3.0.1",
     "cookie-parser": "^1.4.0",
+    "csv.js": "^1.0.2",
     "express-session": "^1.12.1",
     "keysort": "^0.2.0",
     "lusca": "^1.3.0",
