Adding a `content-disposition` header to the `CSV` renderer, removing `this.messages`, adding websocket module (WIP)

--- a/config.json
+++ b/config.json
@@ -99,5 +99,9 @@
 		"message": "Too many requests",
 		"override": null
 	},
+	"websocket": {
+		"enabled": true,
+		"port": 3000
+	},
 	"title": "Tensō Browsable API"
 }
