--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API gateway for node.js, designed to simplify the implementation of APIs.",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -26,6 +26,7 @@
     "express-session": "^1.13.0",
     "keysort": "^0.2.0",
     "lusca": "^1.3.0",
+    "lws": "^0.2.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-google": "^0.3.0",
@@ -36,13 +37,13 @@
     "passport-oauth2": "^1.2.0",
     "passport-saml": "^0.14.0",
     "passport-twitter": "^1.0.4",
-    "retsu": "^2.0.0",
+    "retsu": "^2.0.2",
     "tiny-coerce": "^1.0.1",
     "tiny-defer": "^1.0.4",
     "tiny-merge": "^1.0.0",
     "tiny-uuid4": "^1.0.1",
     "tiny-xml": "^1.0.6",
-    "turtle.io": "^6.0.12",
+    "turtle.io": "^6.0.14",
     "yamljs": "^0.2.5"
   },
   "devDependencies": {
