Dropping the spread operator 'cause babel is fucking it up, lowering default hsts maxAge, fixes #57

--- a/config.json
+++ b/config.json
@@ -70,7 +70,7 @@
 		"xframe": "SAMEORIGIN",
 		"p3p": "",
 		"hsts": {
-			"maxAge": 31536000,
+			"maxAge": 60,
 			"includeSubDomains": true,
 			"preload": true
 		},
