--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API gateway for node.js, designed to simplify the implementation of APIs.",
-  "version": "3.3.2",
+  "version": "3.3.3",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -20,47 +20,47 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "coap": "^0.13.1",
-    "connect-redis": "^3.0.2",
-    "cookie-parser": "^1.4.1",
-    "csv.js": "^1.0.2",
-    "express-session": "^1.13.0",
-    "keysort": "^0.2.0",
-    "lusca": "^1.3.0",
-    "lws": "^0.2.1",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.0",
-    "passport-google": "^0.3.0",
-    "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-linkedin": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.2.0",
-    "passport-saml": "^0.14.0",
-    "passport-twitter": "^1.0.4",
-    "retsu": "^2.0.2",
-    "tiny-coerce": "^1.0.1",
-    "tiny-defer": "^1.0.4",
-    "tiny-merge": "^1.0.0",
-    "tiny-uuid4": "^1.0.1",
-    "tiny-xml": "^1.0.6",
-    "turtle.io": "^6.0.14",
-    "yamljs": "^0.2.5"
+    "coap": "~0.13.1",
+    "connect-redis": "~3.0.2",
+    "cookie-parser": "~1.4.1",
+    "csv.js": "~1.0.2",
+    "express-session": "~1.13.0",
+    "keysort": "~0.2.0",
+    "lusca": "~1.3.0",
+    "lws": "~0.2.1",
+    "passport": "~0.3.2",
+    "passport-facebook": "~2.1.0",
+    "passport-google": "~0.3.0",
+    "passport-http": "~0.3.0",
+    "passport-http-bearer": "~1.0.1",
+    "passport-linkedin": "~1.0.0",
+    "passport-local": "~1.0.0",
+    "passport-oauth2": "~1.2.0",
+    "passport-saml": "~0.14.0",
+    "passport-twitter": "~1.0.4",
+    "retsu": "~2.0.2",
+    "tiny-coerce": "~1.0.1",
+    "tiny-defer": "~1.0.4",
+    "tiny-merge": "~1.0.0",
+    "tiny-uuid4": "~1.0.1",
+    "tiny-xml": "~1.0.6",
+    "turtle.io": "~6.0.15",
+    "yamljs": "~0.2.5"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.8",
-    "babel-preset-es2015": "^6.5.0",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^6.0.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.2.0",
-    "grunt-eslint": "^17.3.2",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-nsp": "^2.1.2",
-    "grunt-sed": "^0.1.1",
-    "hippie": "^0.4.0",
-    "mocha": "^2.4.5"
+    "babel-eslint": "~4.1.8",
+    "babel-preset-es2015": "~6.5.0",
+    "grunt": "~0.4.5",
+    "grunt-babel": "~6.0.0",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-watch": "~0.2.0",
+    "grunt-eslint": "~17.3.2",
+    "grunt-mocha-test": "~0.12.7",
+    "grunt-nsp": "~2.1.2",
+    "grunt-sed": "~0.1.1",
+    "hippie": "~0.4.0",
+    "mocha": "~2.4.5"
   },
   "keywords": [
     "REST",
