--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
-  "description": "Tensō is a REST API gateway for node.js, designed to simplify the implementation of APIs.",
-  "version": "4.0.2",
+  "description": "Tensō is an elastic REST API gateway for node.js",
+  "version": "4.0.3",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -44,7 +44,7 @@
     "tiny-merge": "~1.0.0",
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
-    "turtle.io": "~7.1.16",
+    "turtle.io": "~7.1.19",
     "yamljs": "~0.2.8",
     "uws": "~0.7.0"
   },
