--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API gateway for node.js, designed to simplify the implementation of APIs.",
-  "version": "3.3.11",
+  "version": "3.3.12",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -27,7 +27,6 @@
     "express-session": "~1.13.0",
     "keysort": "~0.2.0",
     "lusca": "~1.3.0",
-    "lws": "~0.2.1",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.0",
     "passport-google": "~0.3.0",
@@ -45,6 +44,7 @@
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
     "turtle.io": "~6.0.19",
+    "uws": "~0.7.9",
     "yamljs": "~0.2.5"
   },
   "devDependencies": {
