Adding `etags.ignore` to config for conditionally blocking ETag header creation on GET requests

--- a/config.json
+++ b/config.json
@@ -51,6 +51,9 @@
 			"consumer_secret": ""
 		}
 	},
+	"etags": {
+		"ignore": []
+	},
 	"compress": true,
 	"headers": {
 		"cache-control": "max-age=60, must-revalidate"
