--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "4.1.8",
+  "version": "4.1.9",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -45,8 +45,8 @@
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
     "turtle.io": "~7.3.3",
-    "yamljs": "~0.2.8",
-    "uws": "~0.7.0"
+    "uws": "~0.7.0",
+    "yamljs": "~0.2.8"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
