--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-google": "~0.3.0",
     "passport-http": "~0.3.0",
     "passport-http-bearer": "~1.0.1",
+    "passport-jwt": "^2.2.1",
     "passport-linkedin": "~1.0.0",
     "passport-local": "~1.0.0",
     "passport-oauth2": "~1.3.0",
