--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "tiny-merge": "~1.0.0",
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
-    "turtle.io": "~7.3.3",
+    "turtle.io": "~7.3.7",
     "uws": "~0.7.0",
     "yamljs": "~0.2.8"
   },
@@ -57,6 +57,7 @@
     "grunt-mocha-test": "~0.12.7",
     "grunt-nsp": "~2.3.1",
     "hippie": "~0.4.0",
+    "jsonwebtoken": "^7.2.1",
     "mocha": "~2.4.5"
   },
   "keywords": [
