Didn't mean to change that

--- a/config.json
+++ b/config.json
@@ -79,7 +79,7 @@
 		"key": "x-csrf-token",
 		"secret": "tenso",
 		"csrf": true,
-		"csp": "",
+		"csp": null,
 		"xframe": "SAMEORIGIN",
 		"p3p": "",
 		"hsts": {
