--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "4.3.29",
+  "version": "4.3.30",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -45,20 +45,20 @@
     "tiny-merge": "~1.0.0",
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
-    "turtle.io": "~7.4.15",
+    "turtle.io": "~7.4.17",
     "uws": "~0.12.0",
     "yamljs": "~0.2.8"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-watch": "~0.2.0",
+    "grunt": "~1.0.1",
+    "grunt-cli": "~1.2.0",
+    "grunt-contrib-watch": "~1.0.0",
     "grunt-eslint": "~19.0.0",
-    "grunt-mocha-test": "~0.12.7",
+    "grunt-mocha-test": "~0.13.2",
     "grunt-nsp": "~2.3.1",
-    "hippie": "~0.4.0",
-    "jsonwebtoken": "^7.2.1",
-    "mocha": "~2.4.5"
+    "mocha": "~3.2.0",
+    "jsonwebtoken": "~7.3.0",
+    "tiny-httptest": "~1.0.5"
   },
   "keywords": [
     "REST",
