--- a/config.json
+++ b/config.json
@@ -127,7 +127,7 @@
 			"port": 5683
 		}
 	},
-	"title": "Tensō Browsable API",
+	"title": "Tensō API",
 	"template": "",
 	"regex": {
 		"hypermedia": "[a-zA-Z]+_(guid|uuid|id|url|uri)$",
