Updating page title

--- a/config.json
+++ b/config.json
@@ -123,7 +123,7 @@
 			"port": 5683
 		}
 	},
-	"title": "Tensō API",
+	"title": "Tensō",
 	"template": "",
 	"regex": {
 		"hypermedia": "[a-zA-Z]+_(guid|uuid|id|url|uri)$",
