Adding a `cache-control` header with the value of `public, max-age=n` for static assets served for browsable interface, upgrades server

--- a/config.json
+++ b/config.json
@@ -130,5 +130,6 @@
 		"hypermedia": "[a-zA-Z]+_(guid|uuid|id|url|uri)$",
 		"id": "^(_id|id)$"
 	},
-	"static": "/assets/.*"
+	"static": "/assets/.*",
+	"staticCache": 300
 }
