--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-oauth2": "~1.3.0",
     "passport-saml": "~0.15.0",
     "passport-twitter": "~1.0.4",
+    "precise": "^1.1.0",
     "retsu": "~2.0.3",
     "tiny-coerce": "~1.0.1",
     "tiny-defer": "~2.0.2",
