--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
     "uws": "~0.14.5",
-    "woodland": "~1.3.5",
+    "woodland": "^2.1.0",
     "yamljs": "~0.2.10"
   },
   "devDependencies": {
