--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "~1.15.3",
     "keysort": "~1.0.2",
     "lusca": "~1.4.1",
+    "mimetype": "0.0.8",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google": "~0.3.0",
@@ -43,6 +44,7 @@
     "retsu": "~2.0.3",
     "tiny-coerce": "~1.0.1",
     "tiny-defer": "~2.0.2",
+    "tiny-etag": "^1.3.3",
     "tiny-merge": "~1.0.0",
     "tiny-uuid4": "~1.0.1",
     "tiny-xml": "~1.0.6",
