--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "grunt": "~1.0.1",
-    "grunt-cli": "~1.2.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-eslint": "~19.0.0",
     "grunt-mocha-test": "~0.13.2",
