Adding `auth.slack.scope` to configuration for `scope` grant specification of Slack auth strategy

--- a/config.json
+++ b/config.json
@@ -58,7 +58,8 @@
 			"enabled": false,
 			"auth": null,
 			"client_id": "",
-			"client_secret": ""
+			"client_secret": "",
+			"scope": []
 		},
 		"twitter": {
 			"enabled": false,
