Exposing `skipUserProfile` configuration option of `Slack` passport middleware

--- a/config.json
+++ b/config.json
@@ -59,6 +59,7 @@
 			"auth": null,
 			"client_id": "",
 			"client_secret": "",
+			"skipUserProfile": false,
 			"scope": []
 		},
 		"twitter": {
