--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "5.1.8",
+  "version": "5.1.9",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -21,6 +21,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "@aoberoi/passport-slack": "^1.0.5",
     "coap": "~0.21.0",
     "connect-redis": "~3.3.0",
     "cookie-parser": "~1.4.3",
@@ -39,7 +40,6 @@
     "passport-local": "~1.0.0",
     "passport-oauth2": "~1.3.0",
     "passport-saml": "~0.15.0",
-    "passport-slack": "0.0.7",
     "passport-twitter": "~1.0.4",
     "precise": "^1.1.0",
     "retsu": "~2.0.3",
