--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "5.2.9",
+  "version": "5.2.10",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -21,56 +21,56 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "coap": "~0.21.0",
-    "connect-redis": "~3.3.0",
-    "cookie-parser": "~1.4.3",
+    "coap": "^0.21.0",
+    "connect-redis": "^3.3.2",
+    "cookie-parser": "^1.4.3",
     "csv.js": "^1.0.3",
-    "express-session": "~1.15.5",
-    "keysort": "~1.0.2",
-    "lusca": "~1.5.1",
+    "express-session": "^1.15.6",
+    "keysort": "^1.0.2",
+    "lusca": "^1.5.2",
     "mimetype": "0.0.8",
-    "passport": "~0.4.0",
-    "passport-facebook": "~2.1.1",
-    "passport-google": "~0.3.0",
-    "passport-http": "~0.3.0",
-    "passport-http-bearer": "~1.0.1",
-    "passport-jwt": "~3.0.0",
-    "passport-linkedin": "~1.0.0",
-    "passport-local": "~1.0.0",
-    "passport-oauth2": "~1.4.0",
-    "passport-saml": "~0.15.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^3.0.1",
+    "passport-linkedin": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
+    "passport-saml": "^0.31.0",
     "passport-slack": "0.0.7",
-    "passport-twitter": "~1.0.4",
+    "passport-twitter": "^1.0.4",
     "precise": "^1.1.0",
-    "retsu": "~2.0.3",
-    "tiny-coerce": "~1.0.1",
+    "retsu": "^2.0.3",
+    "tiny-coerce": "^1.0.1",
     "tiny-etag": "^1.3.11",
-    "tiny-merge": "~1.0.0",
-    "tiny-uuid4": "~1.0.1",
-    "tiny-xml": "~1.0.6",
+    "tiny-merge": "^1.0.0",
+    "tiny-uuid4": "^1.0.1",
+    "tiny-xml": "^1.0.6",
     "uws": "^8.14.1",
     "woodland": "^3.0.5",
-    "yamljs": "~0.3.0"
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-eslint": "~20.1.0",
-    "grunt-mocha-test": "~0.13.2",
-    "grunt-nsp": "~2.3.1",
-    "jsonwebtoken": "~8.0.1",
-    "mocha": "~3.5.3",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^20.1.0",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-nsp": "^2.3.1",
+    "jsonwebtoken": "^8.1.0",
+    "mocha": "^4.0.1",
     "tiny-httptest": "^1.0.9"
   },
   "keywords": [
-    "REST",
-    "API",
+    "rest",
+    "api",
+    "cqrs",
     "gateway",
     "server",
     "hypermedia",
     "elastic",
-    "api",
     "app",
     "application",
     "websockets",
