--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "6.2.4",
+  "version": "6.2.5",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -29,7 +29,7 @@
     "express-session": "^1.15.6",
     "keysort": "^1.0.2",
     "lusca": "^1.5.2",
-    "mimetype": "0.0.8",
+    "mimetype": "^0.0.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google": "^0.3.0",
@@ -40,7 +40,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
     "passport-saml": "^0.31.0",
-    "passport-slack": "0.0.7",
+    "passport-slack": "^0.0.7",
     "passport-twitter": "^1.0.4",
     "precise": "^1.1.0",
     "retsu": "^3.0.1",
