--- a/config.json
+++ b/config.json
@@ -84,13 +84,12 @@
 			"port": 5683
 		}
 	},
+	"cacheSize": 1e3,
+	"cacheTTL": 3e5,
 	"coerce": true,
 	"compress": true,
 	"etags": {
 		"ignore": []
-	},
-	"headers": {
-		"cache-control": "max-age=60, must-revalidate"
 	},
 	"hostname": "127.0.0.1",
 	"http2": false,
