--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -28,14 +28,15 @@
     "csv.js": "^1.0.4",
     "express-session": "^1.15.6",
     "keysort": "^1.0.2",
-    "lusca": "^1.5.2",
+    "lusca": "^1.6.0",
     "mimetype": "^0.0.8",
+    "moment": "^2.22.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google": "^0.3.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.1",
+    "passport-jwt": "^4.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
@@ -43,24 +44,24 @@
     "passport-slack": "^0.0.7",
     "passport-twitter": "^1.0.4",
     "precise": "^1.1.0",
-    "retsu": "^3.0.1",
+    "retsu": "^3.0.2",
     "tiny-coerce": "^1.0.1",
-    "tiny-etag": "^1.4.1",
+    "tiny-etag": "^1.4.3",
     "tiny-merge": "^1.0.0",
     "tiny-uuid4": "^1.0.1",
     "tiny-xml": "^1.0.6",
-    "uws": "^9.14.0",
-    "woodland": "^5.0.0",
+    "uws": "^9.148.0",
+    "woodland": "^5.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.1",
     "grunt-eslint": "^20.1.0",
     "grunt-mocha-test": "^0.13.3",
     "grunt-nsp": "^2.3.1",
-    "jsonwebtoken": "^8.1.1",
+    "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.1",
     "tiny-httptest": "^1.0.14"
   },
