--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "tiny-uuid4": "^1.0.1",
     "tiny-xml": "^1.0.6",
     "uws": "^10.148.1",
-    "woodland": "git+https://github.com/avoidwork/woodland.git",
+    "woodland": "^7.1.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
