Updating `woodland` router, changing `onsend()` handler to be `async` (WIP for compression)

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
     "es6": true,
     "amd": false
   },
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "globals": {
     "describe": true,
     "it": true,
