--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is an elastic REST API gateway for node.js",
-  "version": "8.0.30",
+  "version": "8.0.31",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -28,7 +28,7 @@
     "csv.js": "^1.0.7",
     "express-session": "^1.15.6",
     "keysort": "^1.0.2",
-    "lusca": "^1.6.0",
+    "lusca": "^1.6.1",
     "mimetype": "^0.0.8",
     "moment": "^2.22.2",
     "passport": "^0.4.0",
@@ -37,7 +37,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
-    "passport-saml": "^0.33.0",
+    "passport-saml": "^0.35.0",
     "precise": "^1.1.0",
     "retsu": "^3.0.2",
     "tiny-coerce": "^1.1.1",
@@ -45,13 +45,13 @@
     "tiny-merge": "^1.0.0",
     "tiny-uuid4": "^1.0.1",
     "tiny-xml": "^1.0.6",
-    "uws": "^9.148.0",
-    "woodland": "^7.2.6",
+    "uws": "9.148.0",
+    "woodland": "^7.2.7",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.3.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^21.0.0",
     "grunt-mocha-test": "^0.13.3",
