--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "tiny-xml": "^1.0.6",
     "uws": "9.148.0",
     "woodland": "^7.2.10",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
